--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.17.1",
     "qs": "^4.0.0",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "react-redux": "^4.2.1",
     "redux": "^3.2.1",
+    "redux-canvas": "^1.0.3",
     "redux-thunk": "^1.0.3",
     "serve-static": "^1.10.0"
   },
